--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -8,6 +8,6 @@
             <div><b>Salary: </b>{{job["salary"]}}</div>
         {% endif %}
     </div>
-    <div class="col-2"><button type="button" class="btn btn-outline-primary">Apply</button></div>
+    <div class="col-2"><a href="mailto:hello@jovian.ai?subject=Application for {{job['title']}}" target="_blank" type="button" class="btn btn-outline-primary">Apply</a></div>
     
 </div>
